--- a/intro/PengenalanPython.tex
+++ b/intro/PengenalanPython.tex
@@ -37,7 +37,10 @@ Pengantar Pemrograman Python}
 
 \section{Tujuan}
 \begin{itemize}
-\item Dapat membuat dan mengeksekusi program Python sederhana
+\item dapat membuat dan mengeksekusi program Python sederhana
+\item mampu mengenal dan menggunakan tipe data dasar pada Python
+\item mampu mengenal dan menggunakan kontrol program sederhana pada Python (percabangan dan
+perulangan)
 \end{itemize}
 
 \section{Perangkat lunak yang diperlukan}
@@ -48,15 +51,16 @@ Pengantar Pemrograman Python}
 \item Editor teks seperti \textsf{gedit}, \textsf{VSCode}, \textsf{Atom}
 \end{itemize}
 
-\section{Pendahuluan}
-
-\url{http://www.scipy-lectures.org/language/first_steps.html}
+%\section{Pendahuluan}
+%Python adalah salah satu bahasa pemrograman paling populer.
+%\url{http://www.scipy-lectures.org/language/first_steps.html}
 
 \section{Mengenal interpreter Python (konsol Python)}
 
-Terdapat banyak pilihan untuk berinteraksi dengan interpreter Python:
+Terdapat banyak pilihan untuk berinteraksi dengan interpreter 
+atau konsol Python:
 \begin{itemize}
-\item Terminal default Python, dapat dijalankan dengan mengetikkan
+\item Konsol default Python, dapat dijalankan dengan mengetikkan
 \texttt{python} pada terminal.
 \item IPython, merupakan interpreter Python dengan berbagai fitur tambahan
 seperti \textit{tab-completion} dan \textit{syntax highlighting}.
@@ -82,7 +86,13 @@ IPython 6.4.0 -- An enhanced Interactive Python. Type '?' for help.
 In [1]:
 \end{textcode}
 
-Aritmatika
+Dalam praktikum ini Anda sebaiknya menggunakan IPython karena lebih
+mudah digunakan. Jika IPython belum terpasang, Anda dapat menggunakan
+konsol Python biasa.
+
+Anda dapat menggunakan interpreter ini untuk menjalankan kode Python.
+Kita akan mulai dengan contoh sederhana yaitu operasi aritmatika
+sederhana.
 \begin{pyconcode}
 >>> 2 + 3
 5
@@ -90,7 +100,7 @@ Aritmatika
 0.6666666666666666
 \end{pyconcode}
 
-Variabel
+Anda juga dapat menggunakan variabel.
 \begin{pyconcode}
 >>> a = 3
 >>> b = 4.1
@@ -102,7 +112,9 @@ Variabel
 0.7317073170731708
 \end{pyconcode}
 
-\subsection{Tipe data}
+Berbeda dengan C/C++, suatu variabel tidak perlu dideklarasikan atau
+tipenya sebelum digunakan. Python akan mendeduksi tipe variabel berdasarkan
+nilai awal yang diberikan.
 
 Integer variables::
 \begin{pyconcode}
@@ -116,7 +128,7 @@ floats ::
 >>> c = 2.1
 \end{pyconcode}
 
-Bilangan kompleks
+Python juga mendukung bilangan kompleks.
 \begin{pyconcode}
 >>> a = 1.5 + 0.5j
 >>> a.real
@@ -137,19 +149,98 @@ False
 \end{pyconcode}
 
 
-A Python shell can therefore replace your pocket calculator, with the
-basic arithmetic operations +, -, *, /, \texttt{\%} (modulo)
-natively implemented::
+\subsection*{Tugas}
+
+Carilah operator matematika yang didukung oleh Python.
+Beberapa sumber berikut dapat Anda gunakan:
+\begin{itemize}
+\item \url{https://www.tutorialspoint.com/python/python_basic_operators.htm}
+\item \url{https://en.wikibooks.org/wiki/Python_Programming/Basic_Math}
+\end{itemize}
+
+
+\section{Kode sumber Python}
+
+Selain menggunakan konsol Python, kita dapat menuliskan program
+yang kita buat dalam suatu file teks dengan ekstensi \texttt{.py}.
+Anda dapat membuat file ini dengan editor yang mendukung Python, beberapa
+diantaranya adalah:
+\begin{itemize}
+\item \textsf{Gedit} yang biasanya sudah terpasang di Ubuntu dan banyak distribusi
+Linux
+\item \textsf{Atom} yang merupakan editor teks multifungsi. Editor ini dapat
+dijalankan baik di Windows, OSX, maupun Linux.
+\item \textsf{Visual Studio Code}, mirip dengan \textsf{Atom}.
+Meskipun dikembangkan oleh Microsoft, editor ini juga dapat dijalankan di Linux dan
+OSX.
+\item \textsf{Spyder} yang merupakan IDE (\textit{integrated development environment}) untuk
+Python.
+\end{itemize}
+
+Misalkan file program Python Anda bernama \texttt{hitung.py}, maka Anda dapat
+mejalankan program ini dari terminal dengan perintah berikut.
+\begin{textcode}
+python hitung.py
+\end{textcode}
+
+Komentar pada Python dimulai dengan tanda \verb|#|.
+
+\section{Modul Python}
+
+Banyak fungsionalitas dari Python yang dikumpulkan dalam sebuat modul.
+Pada praktikum ini dan selanjutnya, kita akan banyak menggunakan modul-modul
+tersebut.
+Modul Python ini ada yang sifatnya standard atau bawaan dan yang lainnya
+harus dipasang terlebih dahulu sebagai suatu paket atau pustaka.
+Modul pertama yang akan kita temui adalah modul \texttt{math}. Modul ini
+adalah modul standard bawaan Python.
+
+Modul ini dapat diakses dengan menggunakan perintah \texttt{import math}.
 \begin{pyconcode}
->>> 7 * 3.0
-21.0
->>> 2**10
-1024
->>> 8%3
-2
+>>> import math
+>>> dir(math)
+['__doc__', '__file__', '__loader__', '__name__', '__package__', '__spec__', 'acos', 'acosh', 'asin', 'asinh', 'atan', 'atan2', 'atanh', 'ceil', 'copysign', 'cos', 'cosh', 'degrees', 'e', 'erf', 'erfc', 'exp', 'expm1', 'fabs', 'factorial', 'floor', 'fmod', 'frexp', 'fsum', 'gamma', 'gcd', 'hypot', 'inf', 'isclose', 'isfinite', 'isinf', 'isnan', 'ldexp', 'lgamma', 'log', 'log10', 'log1p', 'log2', 'modf', 'nan', 'pi', 'pow', 'radians', 'sin', 'sinh', 'sqrt', 'tan', 'tanh', 'tau', 'trunc']
 \end{pyconcode}
 
-Scalar types: int, float, complex, bool::
+Perintah \texttt{dir(math)} digunakan untuk mengetahui simbol
+(fungsi dan/atau konstanta) apa saja yang
+didefinisikan dalam module \texttt{math}. Anda dapat menggunakan perintah
+\texttt{help(math.log2)} misalnya, untuk membaca dokumentasi mengenai fungsi ini.
+
+Contoh penggunaan modul \texttt{math}
+\begin{pyconcode}
+>>> math.sin(math.pi)
+1.2246467991473532e-16
+>>> math.sin(0.5*math.pi)
+1.0
+>>> math.sin(0.3*math.pi)
+0.8090169943749475
+>>> math.sin(math.pi/3)
+0.8660254037844386
+\end{pyconcode}
+
+Sintaks alternatif berikut ini juga sering digunakan.
+\begin{pythoncode}
+from math import *
+\end{pythoncode}
+Dengan sintaks di atas, semua fungsi pada modul \texttt{math} akan diekspor ke
+konteks global Python.
+Jika kita hanya ingin mengimpor beberapa simbol saja dapat digunakan
+sintaks seperti berikut ini.
+\begin{pythoncode}
+from math import pi, factorial
+\end{pythoncode}
+
+
+\subsection*{Tugas}
+
+Buatlah suatu program sederhana untuk menghitung akar-akar dari
+persamaan kuadrat.
+
+
+
+Fungsi \texttt{type} dapat digunakan untuk mengetahui tipe data dari
+suatu nilai dari variabel atau eskpresi.
 \begin{pyconcode}
 >>> type(1)
 <type 'int'>
@@ -157,42 +248,48 @@ Scalar types: int, float, complex, bool::
 <type 'float'>
 >>> type(1. + 0j )
 <type 'complex'>
-
 >>> a = 3
 >>> type(a)
 <type 'int'>
 \end{pyconcode}
 
 
-* Type conversion::
+Beberapa tipe data dapat dikonversi antara satu dengan yang lainnya.
 \begin{pyconcode}
->>> float(1)
-1.0
+>>> a = 2
+>>> type(a)
+<class 'int'>
+>>> b = float(a)
+>>> b
+2.0
+>>> type(b)
+<class 'float'>
+>>> c = 2.3
+>>> d = int(2.3)
+>>> d
+2
 \end{pyconcode}
 
-\subsection{Containers}
+\section{Tipe data kontainer}
+Python memiliki beberapa tipe data kontainer yang merupakan kumpulan
+dari beberapa tipe objek.
 
-
-Python provides many efficient types of containers, in which collections of
-objects can be stored.
-
-\subsubsection{Lists}
-
-A list is an ordered collection of objects, that may have different
-types. For example ::
+\subsection{Lists}
+List merupakan kumpulan objek yang memiliki urutan. Objek-objek ini
+dapat memiliki tipe yang berbeda. Contoh
 \begin{pyconcode}
 >>> l = [1, 2, 3, 4, 5]
 >>> type(l)
 <type 'list'>
 \end{pyconcode}
 
-Indexing: accessing individual objects contained in the list::
+Kita dapat mengakses suatu objek dengan menggunan indeksnya.
 \begin{pyconcode}
 >>> l[2]
 3
 \end{pyconcode}
 
-Counting from the end with negative indices::
+Indeks negatif dapat digunakan untuk mengakses dari akhir.
 \begin{pyconcode}
 >>> l[-1]
 5
@@ -200,11 +297,10 @@ Counting from the end with negative indices::
 4
 \end{pyconcode}
 
-warning
+Mirip dengan bahasa C/C++, indeks pada Python dimulai dari 0.
 
-Indexing starts at 0** (as in C), not at 1 (as in Fortran or Matlab)!
-
-Slicing: obtaining sublists of regularly-spaced elements
+Operasi slicing dapat digunakan untuk mendapatkan sublist dari
+suatu list (mirip dengan Matlab/Octave/Scilab).
 \begin{pyconcode}
 >>> l
 [1, 2, 3, 4, 5]
@@ -212,25 +308,23 @@ Slicing: obtaining sublists of regularly-spaced elements
 [3, 4]
 \end{pyconcode}
 
-Warning
+Perhatikan bawah \texttt{l[start:stop]} akan memberikan
+elemen dengan indeks \texttt{i} di mana \texttt{start<= i < stop}.
+Artinya, \texttt{l[start:stop]} akan memiliki
+\texttt{(stop-start)} buah element.
 
-Note that l[start:stop] contains the elements with indices i
-such as  \texttt{start<= i < stop} (i ranging from start to
-stop-1). Therefore, l[start:stop] has (stop-start) elements.
-
-Slicing syntax: l[start:stop:stride]
-
-All slicing parameters are optional::
+Sintaks untuk slicing: \texttt{l[start:stop:stride]}.
+Semua parameternya bersifat opsional.
 \begin{pyconcode}
->> l[3:]
-4, 5]
->> l[:3]
-1, 2, 3]
->> l[::2]
-1, 3, 5]
+>>> l[3:]
+[4, 5]
+>>> l[:3]
+[1, 2, 3]
+>>> l[::2]
+[1, 3, 5]
 \end{pyconcode}
 
-Lists are mutable objects and can be modified::
+List bersifat \textit{mutable}, artinya nilainya dapat diubah.
 \begin{pyconcode}
 >>> l[0] = 28
 >>> l
@@ -240,9 +334,7 @@ Lists are mutable objects and can be modified::
 [28, 2, 3, 8, 5]
 \end{pyconcode}
 
-Note;
-
-The elements of a list may have different types::
+Elemen-element pada suatu list dapat memiliki tipe yang berbeda.
 \begin{pyconcode}
 >>> l = [3, 2, 'hello']
 >>> l
@@ -251,15 +343,7 @@ The elements of a list may have different types::
 (2, 'hello')
 \end{pyconcode}
 
-As the elements of a list can be of any type and size, accessing the
-i th element of a list has a complexity O(i). For collections of
-numerical data that all have the same type, it is **more efficient** to use
-the **array** type provided by the **Numpy** module, which is a sequence
-of regularly-spaced chunks of memory containing fixed-sized data istems.
-With Numpy arrays, accessing the i`th` element has a complexity of O(1)
-because the elements are regularly spaced in memory.
-
-Add and remove elements::
+Menambahkan dan mengurangi elemen pada suatu list.
 \begin{pyconcode}
 >>> l = [1, 2, 3, 4, 5]
 >>> l.append(6)
@@ -269,7 +353,7 @@ Add and remove elements::
 6
 >>> l
 [1, 2, 3, 4, 5]
->>> l.extend([6, 7]) # extend l, in-place
+>>> l.extend([6, 7])
 >>> l
 [1, 2, 3, 4, 5, 6, 7]
 >>> l = l[:-2]
@@ -277,14 +361,14 @@ Add and remove elements::
 [1, 2, 3, 4, 5]
 \end{pyconcode}
 
-Reverse l
+Membalikkan urutan pada list.
 \begin{pyconcode}
 >>> r = l[::-1]
 >>> r
 [5, 4, 3, 2, 1]
 \end{pyconcode}
 
-Concatenate and repeat lists:: 
+Menyambung (\texttt{list}) dan mengurangi element pada list.
 \begin{pyconcode}
 >>> r + l
 [5, 4, 3, 2, 1, 1, 2, 3, 4, 5]
@@ -292,26 +376,24 @@ Concatenate and repeat lists::
 [5, 4, 3, 2, 1, 5, 4, 3, 2, 1]
 \end{pyconcode}
 
-Sort r (in-place)::
+Mengurutkan elemen-elemen pada list.
 \begin{pyconcode}
 >>> r.sort()
 >>> r
 [1, 2, 3, 4, 5]
 \end{pyconcode}
 
-Note:: **Methods and Object-Oriented Programming**
 
-The notation r.method() (r.sort(), r.append(3), l.pop()) is our
-first example of object-oriented programming (OOP). Being a list, the
-object `r` owns the *method* `function` that is called using the notation
-**.**. No further knowledge of OOP than understanding the notation **.** is
-necessary for going through this tutorial.  
-
+Untuk perhitungan numerik dan komputasi performa tinggi, paket
+\textsf{Numpy} lebih sering digunakan. Informasi mengenai \textsf{Numpy}
+dapat ditemukan di \url{www.numpy.org}.
 
 
 \subsection{Strings}
 
-Different string syntaxes (simple, double or triple quotes)::
+Tipe data string pada Python ditandai dengan menggunakan tanda
+kutip tunggal (\texttt{"}) atau ganda (\texttt{"}). Tiga tanda kutip
+(baik tunggal maupun ganda) dapat digunakan untuk string yang panjang.
 \begin{pyconcode}
 s = 'Hello, how are you?'
 s = "Hi, what's up"
@@ -321,13 +403,13 @@ s = """Hi,
    what's up?'''
 \end{pyconcode}
 
-The newline character is \verb|\n|, and the tab characted is
+Karakter baris baru adalah \verb|\n| dan karakter tab adalah.
 \verb|\t|.
 
-Strings are collections as lists. Hence they can be indexed and sliced,
-using the same syntax and rules.
+String dapat dianggap sebagai list dari karakter (huruf), artinya string
+juga memiliki operasi yang sama dengan list.
 
-Indexing::
+Mengakses elemen lewat indeks.
 \begin{pyconcode}
 >>> a = "hello"
 >>> a[0]
@@ -338,46 +420,33 @@ Indexing::
 'o'
 \end{pyconcode}
 
-(Remember that Negative indices correspond to counting from the right
-end.)
-
-Slicing
-
+Slicing.
 \begin{pyconcode}
 >>> a = "hello, world!"
->>> a[3:6] # 3rd to 6th (excluded) elements: elements 3, 4, 5
+>>> a[3:6]
 'lo,'
->>> a[2:10:2] # Syntax: a[start:stop:step]
+>>> a[2:10:2]
 'lo o'
->>> a[::3] # every three characters, from beginning to end 
+>>> a[::3]
 'hl r!'
 \end{pyconcode}
 
-A string is an **immutable object** and it is not possible to modify its
-characters. One may however create new strings from an original one.
+Berbeda dengan list, string bersifat \textit{immutable}.
+Kita tidak bisa mengubah karakter pada string, akan tetapi kita dapat
+membuat string baru dari string awal.
+String memiliki banyak metode yang dapat digunakan keperluan
+manipulasi teks.
 
-Strings have many useful methods, such as a.replace as seen above.
-Remember the a. object-oriented notation and use tab completion or
-help(str) to search for new methods.
+\subsubsection*{Tugas}
+
+Baca dokumentasi Python mengenai string:
+\url{https://docs.python.org/3/library/string.html}
 
 
-String substitution
-\begin{pyconcode}
->>> 'An integer: %i; a float: %f; another string: %s' % (1, 0.1, 'string')
-    'An integer: 1; a float: 0.100000; another string: string'
->>> i = 102
->>> filename = 'processing_of_dataset_%03d.txt'%i
->>> filename
-'processing_of_dataset_102.txt'
-\end{pyconcode}
 
 \subsection{Dictionary/Kamus}
 
 Tipe data kamus adalah tabel yang yang memetakan kunci ke suatu nilai.
-
-is basically a hash table that **maps keys to values**. It
-is therefore an **unordered** container::
-
 \begin{pyconcode}
 >>> tel = {'emmanuelle': 5752, 'sebastian': 5578}
 >>> tel['francis'] = 5915 
@@ -401,9 +470,9 @@ Suatu kamus dapat memiliki kunci dan nilai yang memiliki tipe berbeda
 \end{pyconcode}
 
 \subsection{Tupel}
-
-Tuples are basically immutable lists. The elements of a tuple are written
-between brackets, or just separated by commas
+Tupel dapat dianggap sebagai list \texttt{immutable}.
+Elemen-elemen tupel ditulis dalam tanda kurung dan dipisahkan dengan
+tanda koma.
 \begin{pyconcode}
 >>> t = 12345, 54321, 'hello!'
 >>> t[0]
@@ -413,240 +482,145 @@ between brackets, or just separated by commas
 >>> u = (0, 2)
 \end{pyconcode}
 
-\subsection{Set/Himpunan}
 
-Sets (himpunan): non ordered, unique items
+
+\section{Kontrol alur program}
+
+\subsection{Percabangan: \texttt{if/elif/else}}
+  
 \begin{pyconcode}
->>> s = set(('a', 'b', 'c', 'a'))
->>> s
-set(['a', 'c', 'b'])
->>> s.difference(('a', 'b'))
-set(['c'])
+>>> a = 2
+>>> if a < 0:
+...     print("a bernilai negatif")
+... else:
+...     print("a bernilai positif")
+... 
 \end{pyconcode}
 
-Complex: cmath module
 
-
-\subsection{Control Flow}
-
-Controls the order in which the code is executed.
-
-if/elif/else
-------------
-
-.. sourcecode:: ipython
-  
-    In [1]: if 2**2 == 4:
-       ...:     print('Obvious!')
-       ...: 
-    Obvious!
-
-
-**Blocks are delimited by indentation**
-
-Type the following lines in your Python interpreter, and be careful to
-**respect the indentation depth**. The Ipython shell automatically
-increases the indentation depth after a column ``:`` sign; to
-decrease the indentation depth, go four spaces to the left with the
-Backspace key. Press the Enter key twice to leave the logical block.
-
-.. sourcecode:: ipython
-
-    In [2]: a = 10
-    
-    In [3]: if a == 1:
-       ...:     print(1)
-       ...: elif a == 2:
-       ...:     print(2)
-       ...: else:
-       ...:     print('A lot')
-       ...: 
-    A lot
-
-Indentation is compulsory in scripts as well. As an exercise, re-type the
-previous lines with the same indentation in a script ``condition.py``, and
-execute the script with ``run condition.py`` in Ipython.
-
-for/range
-----------
-
-Iterating with an index:
-
-.. sourcecode:: ipython
-
-    In [4]: for i in range(4):
-       ...:     print(i)
-       ...: 
-    0
-    1
-    2
-    3
-
-But most often, it is more readable to iterate over values:
-
-.. sourcecode:: ipython
-
-    In [5]: for word in ('cool', 'powerful', 'readable'):
-       ...:     print('Python is %s' % word)
-       ...: 
-    Python is cool
-    Python is powerful
-    Python is readable
-
-
-while/break/continue
----------------------
-
-Typical C-style while loop (Mandelbrot problem):
-
-.. sourcecode:: ipython
-
-    In [6]: z = 1 + 1j
-
-    In [7]: while abs(z) < 100:
-       ...:     z = z**2 + 1
-       ...:     
-
-    In [8]: z
-    Out[8]: (-134+352j)
-
-**More advanced features**
-
-``break`` out of enclosing for/while loop:
-
-.. sourcecode:: ipython
-
-    In [9]: z = 1 + 1j
-
-    In [10]: while abs(z) < 100:
-       ....:     if z.imag == 0:
-       ....:         break
-       ....:     z = z**2 + 1
-       ....:     
-       ....:     
-
-
-``continue`` the next iteration of a loop.::
-
-    >>> a = [1, 0, 2, 4]
-    >>> for element in a:
-    ...     if element == 0:
-    ...         continue
-    ...     print 1. / element
-    ...     
-    1.0
-    0.5
-    0.25
-
-
-
-Conditional Expressions
------------------------
-
-* `if object`
-
-  Evaluates to True:
-    * any non-zero value
-    * any sequence with a length > 0
-
-  Evaluates to False:
-    * any zero value
-    * any empty sequence
-
-* `a == b`
-
-  Tests equality, with logics:
-
-  .. sourcecode:: ipython
-
-    In [19]: 1 == 1.
-    Out[19]: True
-
-* `a is b`
-
-  Tests identity: both objects are the same
-
-  .. sourcecode:: ipython
-
-    In [20]: 1 is 1.
-    Out[20]: False
-
-    In [21]: a = 1
-
-    In [22]: b = 1
-
-    In [23]: a is b
-    Out[23]: True
-
-* `a in b`
-
-  For any collection `b`: `b` contains `a` ::
-
-    >>> b = [1, 2, 3]
-    >>> 2 in b
-    True
-    >>> 5 in b
-    False
-
-
-  If `b` is a dictionary, this tests that `a` is a key of `b`.
-
-Advanced iteration
-
-
-Iterate over any *sequence*
-
-
-* You can iterate over any sequence (string, list, dictionary, file, ...)
-
-  .. sourcecode:: ipython
-
-    In [11]: vowels = 'aeiouy'
-
-    In [12]: for i in 'powerful':
-       ....:     if i in vowels:
-       ....:         print(i),
-       ....:         
-       ....:         
-    o e u
-
-::
-
-    >>> message = "Hello how are you?"
-    >>> message.split() # returns a list
-    ['Hello', 'how', 'are', 'you?']
-    >>> for word in message.split():
-    ...     print word
-    ...     
-    Hello
-    how
-    are
-    you?
-
-Few languages (in particular, languages for scienfic computing) allow to
-loop over anything but integers/indices. With Python it is possible to
-loop exactly over the objects of interest without bothering with indices
-you often don't care about.
- 
-warning:: Not safe to modify the sequence you are iterating over.
-
-Keeping track of enumeration number
-
-Common task is to iterate over a sequence while keeping track of the
-item number.
-
-* Could use while loop with a counter as above. Or a for loop:
-
-    In [13]: for i in range(0, len(words)):
-       ....:     print(i, words[i])
-       ....:     
-       ....:     
-    0 cool
-    1 powerful
-    2 readable
-
-But Python provides enumerate for this
-\begin{pycodecode}
+\textbf{Indentasi sangat penting pada Python.}
+
+Jika Anda kesulitan atau tidak nyaman menuliskan di konsol, Anda
+dapat menuliskannya di file dengan ekstensi \texttt{*.py}.
+Anda tidak perlu menuliskan \verb|>>>| atau \verb|...|.
+
+Contoh lain
+\begin{pyconcode}
+>>> a = 10 
+>>> if a == 1:
+...     print(1)
+... elif a == 2:
+...     print(2)
+... else:
+...     print('A lot')
+... 
+A lot
+\end{pyconcode}
+
+
+\subsection{Perulangan: \texttt{for/range}}
+
+Perulangan dengan indeks
+\begin{pyconcode}
+>>> for i in range(4):
+...     print(i)
+... 
+0
+1
+2
+3
+\end{pyconcode}
+
+Iterasi terhadap nilai:
+\begin{pyconcode}
+>>> for word in ('cool', 'powerful', 'readable'):
+...     print('Python is %s' % word)
+...
+Python is cool
+Python is powerful
+Python is readable
+\end{pyconcode}
+
+\subsection{Perulangan: \texttt{while/break/continue}}
+
+\begin{pyconcode}
+>>> a = 3;
+>>> while a < 10:
+...     a = a + 1
+... 
+>>> a
+10
+\end{pyconcode}
+
+\texttt{break} dapat digunakan untuk
+keluar dari loop \texttt{for} atau \texttt{while}
+\begin{pyconcode}
+>>> a = 10;
+>>> while a > 0:
+...     a = a - 2
+...     if a < 3: break
+... 
+>>> a
+2
+\end{pyconcode}
+
+
+\texttt{continue} dapat digunakan untuk meneruskan ke
+iterasi selanjutnya (biasanya untuk melangkaui suatu iterasi)
+\begin{pyconcode}
+>>> a = [1, 0, 2, 4]
+>>> for element in a:
+...     if element == 0:
+...         continue
+...     print(1.0/element)
+...     
+1.0
+0.5
+0.25
+\end{pyconcode}
+
+
+\subsection{Iterasi pada string, list, dan dictionary}
+
+Kita dapat melakukan iterasi terhadap string, list dan dictionary
+\begin{pyconcode}
+>>> vowels = 'aeiouy'
+>>> for i in 'powerful':
+...     if i in vowels:
+...         print(i),
+...         
+...         
+o e u
+\end{pyconcode}
+
+Contoh
+\begin{pyconcode}
+>>> message = "Hello how are you?"
+>>> message.split() # mengembalikan list
+['Hello', 'how', 'are', 'you?']
+>>> for word in message.split():
+...     print word
+...     
+Hello
+how
+are
+you?
+\end{pyconcode}
+
+Contoh:
+\begin{pyconcode}
+>>> words = ('cool', 'powerful', 'readable')
+>>> for i in range(0, len(words)):
+....     print(i, words[i])
+....     
+....     
+0 cool
+1 powerful
+2 readable
+\end{pyconcode}
+
+Fungsi \texttt{enumerate} juga dapat digunakan
+\begin{pyconcode}
 >>> words = ('cool', 'powerful', 'readable')
 >>> for index, item in enumerate(words):
 ...     print index, item
@@ -657,9 +631,7 @@ But Python provides enumerate for this
 \end{pyconcode}
 
 
-Looping over a dictionary
-
-Use \texttt{items()}
+Loop pada dictionary dengan menggunakan \texttt{items()}
 \begin{pyconcode}
 >>> d = {"a" : 1, "b" : 1.2, "c" : 1j}
 >>> for key, val in d.items():
@@ -667,17 +639,67 @@ Use \texttt{items()}
 Key: a has value: 1
 Key: c has value: 1j
 Key: b has value: 1.2
-\end{pycode}
-
-List Comprehensions
-\begin{pyconcode}
-In [16]: [i**2 for i in range(4)]
-Out[16]: [0, 1, 4, 9]
 \end{pyconcode}
 
 
+\section{Mendefinisikan fungsi}
 
+Sintaks dasar:
+\begin{pyconcode}
+>>> def test():
+...     print("in test function")
+...
+>>> test()
+in test function
+\end{pyconcode}
 
+\textbf{Ingat bahwa indentasi signifikan pada Python}
+
+Fungsi dapat mengembalikan nilai
+\begin{pyconcode}
+>>> def disk_area(radius):
+...     return 3.14 * radius * radius
+...
+>>> disk_area(1.5)
+>>> 7.0649999999999995
+\end{pyconcode}
+
+Secara default, fungsi mengembalikan \texttt{None}.
+
+Parameter fungsi pada Python dapat berupa parameter wajib yang sesuai
+dengan posisinya pada definisi fungsi.
+
+\begin{pyconcode}
+>>> def double_it(x):
+...     return x*2
+... 
+>>> double_it(3)
+6
+>>> double_it(3.2)
+6.4
+>>> double_it()
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+TypeError: double_it() missing 1 required positional argument: 'x'
+>>> double_it(3,1)
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+TypeError: double_it() takes 1 positional argument but 2 were given
+\end{pyconcode}
+
+Argumen fungsi pada Python juga dapat bersifat
+opsional, dengan menggunakan kata kunci atau nama argumen.
+Dengan menggunakan argument kata kunci, kita dapat memberikan nilai
+default pada fungsi.
+\begin{pyconcode}
+>>> def double_it(x=2):
+...     return x * 2
+...
+>>> double_it()
+>>> 4
+>>> double_it(3)
+>>> 6
+\end{pyconcode}
 
 
 \end{document}
