Update untuk tahun 2019

--- a/intro/PengenalanPython.tex
+++ b/intro/PengenalanPython.tex
@@ -41,6 +41,7 @@ Pengantar Pemrograman Python}
 \item mampu mengenal dan menggunakan tipe data dasar pada Python
 \item mampu mengenal dan menggunakan kontrol program sederhana pada Python (percabangan dan
 perulangan)
+\item mampu membuat fungsi sederhana (subrutin) pada Python
 \end{itemize}
 
 \section{Perangkat lunak yang diperlukan}
@@ -48,12 +49,20 @@ perulangan)
 \item Linux OS
 \item Distribusi Anaconda untuk Python 3
 \item Browser
-\item Editor teks seperti \textsf{gedit}, \textsf{VSCode}, \textsf{Atom}
+\item Editor teks seperti:
+  \begin{itemize}
+  \item \textsf{gedit} (biasanya sudah tersedia pada banyak distro Linux)
+  \item \textsf{VSCode} (\url{https://code.visualstudio.com/})
+  \item \textsf{Atom} (\url{https://atom.io/})
+  \end{itemize}
 \end{itemize}
 
 %\section{Pendahuluan}
 %Python adalah salah satu bahasa pemrograman paling populer.
 %\url{http://www.scipy-lectures.org/language/first_steps.html}
+
+Python Anaconda pada Ubuntu 18.04 di LabKom
+\texttt{/opt/anaconda3}
 
 \section{Mengenal interpreter Python (konsol Python)}
 
