--- a/intro/PengenalanPython.tex
+++ b/intro/PengenalanPython.tex
@@ -18,8 +18,10 @@
 
 \usepackage{minted}
 \newminted{pycon}{breaklines,fontsize=\small}
+\newminted{ipython3}{breaklines,fontsize=\small}
 \newminted{python}{breaklines,fontsize=\small}
 \newminted{text}{breaklines,fontsize=\small}
+\newminted{bash}{breaklines,fontsize=\small}
 
 \definecolor{myframebg}{rgb}{0.95,0.95,0.95}
 \usepackage{mdframed}
@@ -120,6 +122,7 @@ source /opt/anaconda3/bin/activate
 
 \input{fungsi}
 
+\input{modul}
 
 
 \end{document}
