--- a/intro/tipe_data_kontainer.tex
+++ b/intro/tipe_data_kontainer.tex
@@ -3,8 +3,10 @@ Python memiliki beberapa tipe data kontainer yang merupakan kumpulan
 dari beberapa tipe objek. Tipe data kontainer pada Python diantaranya
 adalah:
 \begin{itemize}
-\item List
-\item 
+\item list
+\item string
+\item dictionary
+\item tup=el
 \end{itemize}
 
 \subsection{Lists}
@@ -16,7 +18,7 @@ dapat memiliki tipe yang berbeda. Contoh
 <type 'list'>
 \end{pyconcode}
 
-Kita dapat mengakses suatu objek dengan menggunan indeksnya.
+Kita dapat mengakses suatu objek dengan menggunakan indeksnya.
 \begin{pyconcode}
 >>> l[2]
 3
